= Revision history for Mezuro module KalibroProcessor

KalibroProcessor is the processing web service for Mezuro.

== Unreleased

* Update KolektiMetricfu

== v1.3.2 - 25/05/2016

* Fixes for ruby 2.0 and 2.1 compatibility

== v1.3.1 - 11/05/2016

* Fix ruby 2.0.0 support

== v1.3.0 - 11/05/2016

* Use kolekti_radon (and remove the whole Native collecting structure)
* Use kolekti_metricfu
* Fix persistence strategy use of Kolekti's hostpost metric results API
* Deprecates KalibroModule#module_results
* Handle errors of compound metrics that use hotspot metric codes on their scripts

== v1.2.1 - 01/04/2016

* Update kalibro_client

== v1.2.0 - 28/03/2016

* Add CodeClimate PHPMD collector

== v1.1.10 - 03/03/2016

* Fix missing mock on MetricCollectors find spec to avoid caching errors
* Adapt kalibro_processor to the new Kolekti API for registering collectors
* Update kolekti_analizo to v0.0.3

== v1.1.9 - 26/02/2016

* Avoid encoding mismatch issue with PgSQL

== v1.1.8 - 24/02/2016

* Update kolekti to v0.0.2

== v1.1.7 - 22/02/2016

* Adjust scope to the new format required by kalibro configuration
* Capture NoMethodErrors on ProcessingJobs
* Update kolekti, kalibro_client and kolekti_analizo

== v1.1.7.rc1 - 05/02/2016

* Use kolekti
* Use kolekti_analizo
* Get default metric value from Kolekti
* Update documentation

== v1.1.6 - 27/01/2016

* Allow same module name given different granularities
* Fix KalibroModule parent search scope
* Save new KalibroModules built by TreeBuilder
* Search for existing KalibroModule parent before returning new ones

== v1.1.5 - 30/11/2015

* Notify exceptions within ActiveJob
* Handle repository URL changes in GIT and SVN downloaders
* Integrity validations for Kalibro Module, Metric Result and Module Result

== v1.1.4 - 25/11/2015

* Fix status codes of responses
* Fix Analizo results ROOT mudule aggregation
* Rename 'metric_results' methods to 'tree_metric_results'

== v1.1.3 - 16/11/2015

* Foreman support
